--- a/management/style.css
+++ b/management/style.css
@@ -10,6 +10,29 @@ font-family:Arial;
 font-size:16px;
 color:#999999;
 }
+.tight_table {
+border: 1px solid black;
+border-collapse: collapse;
+}
+.tight_even {
+border: 1px solid black;
+background-color: #E2EDF9;
+border-collapse: collapse;
+}
+.tight_odd {
+border: 1px solid black;
+background-color: #B3E8FF;
+border-collapse: collapse;
+}
+.fg_red {
+color: red;
+}
+.fg_green {
+color: green;
+}
+.fg_blue {
+color: blue;
+}
 .tblSaveForm {
 border-top:3px SkyBlue solid;
 background-color: #f8f8f8;
