Added Hillclimb style Results pages
Added a results page that suits hill climbs.
  * Grouped by Classes
  * Only time is ET
  * Include car make/model
  * Show place in class, and outright placing

--- a/management/style.css
+++ b/management/style.css
@@ -68,6 +68,12 @@ border-radius:4px;
 .input_number{
 width:60px;
 }
+.newClass {
+background-color: #AAAAFF;
+font-size:18px;
+font-weight: bold;
+color:#101010;
+}
 .evenRow {
 background-color: #E2EDF9;
 font-size:14px;
