Add class_info for decorating hillclimb results
Add a new table for class_info to record extra information
about a class.

There are 2 fileds,  record  &  info.

The main intent is for recording/reporting what the current record
is by class.  But info is really free form so can be used to
hold anything.

--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ font-size:18px;
 font-weight: bold;
 color:#101010;
 }
+.classInfo {
+font-size:16px;
+font-weight: normal;
+}
 .evenRow {
 background-color: #E2EDF9;
 font-size:14px;
