Updates so that hillclimb results use new input mapping
    Green light  ->  Button input   # load new car
    Start beam   ->  Green input
    ?Split beam  ->  Start input
    Finish beam  ->  Finish input

Updates to the results reporting

Update  green_times.php, start_times.php, and finish_times.php
so that the different modes can be selected

Update  run_management_hillclimb  to call the above with the
required flags

--- a/html/HSV_Timing/management/style.css
+++ b/html/HSV_Timing/management/style.css
@@ -1,5 +1,6 @@
 body {
 font-family:Arial;
+font-size:16px;
 }
 input {
 font-family:Arial;
@@ -8,7 +9,10 @@ font-size:16px;
 label{
 font-family:Arial;
 font-size:16px;
-color:#999999;
+}
+select{
+font-family:Arial;
+font-size:16px;
 }
 .tight_table {
 border: 1px solid black;
